fixed major UI flaw
repaired css where blocks of code were unreadable on light mode

--- a/themes/terminal-blog/assets/scss/_variables.scss
+++ b/themes/terminal-blog/assets/scss/_variables.scss
@@ -2,7 +2,7 @@
 
 /* Light theme color */
 $light-background: #fff;
-$light-background-secondary: #eaeaea;
+$light-background-secondary: #2d2d2d;
 $light-background-header: #fafafa;
 $light-color: #222;
 $light-color-variant: black;
